# musikcube

./: CMakeLists.txt
src/plugins/discordpresence/: CMakeLists.txt  DiscordPlaybackRemote.cpp  DiscordPlaybackRemote.h  DiscordPresence.cpp  DiscordPresence.h  discordpresence_plugin.cpp
src/plugins/discordpresence/discord-lib/: .gitignore
src/plugins/httpdatastream/: LruDiskCache.h
